Made compatible with Java-8.